@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.74
 	Support Sec-CH-UA-Mobile
+	Calling new on an object now returns a clone rather than setting the defaults in the new object
 
 0.73	Fri Oct 29 07:32:37 EDT 2021
 	Attempt to fix https://www.cpantesters.org/cpan/report/6db47260-389e-11ec-bc66-57723b537541
